# machine.py

./: .flake8  .gitattributes  .gitignore  .ignore  .pylintrc  LICENSE  README.md  dockerfile  dockerfile.cpu_only  local_check.sh  pyproject-312.toml  pyproject.toml  pytest.ini
.devcontainer/: clearml.conf  devcontainer.json  dockerfile  dockerfile-Python312
.github/workflows/: ci.yml  create-porting-issue.yml  docker-build-push.yml
examples/: corpora.ipynb  extract_usx.py
machine/: string_utils.py
machine/annotations/: __init__.py  range.py
machine/clusterers/: __init__.py  cluster.py  flat_clusterer.py  flat_upgma_clusterer.py  neighbor_joining_clusterer.py  rooted_hierarchical_clusterer.py  unrooted_hierarchical_clusterer.py  upgma_clusterer.py
machine/corpora/: BiblicalTermsEn.xml  BiblicalTermsEs.xml  BiblicalTermsFr.xml  BiblicalTermsId.xml  BiblicalTermsP6NT.xml  BiblicalTermsPt.xml  BiblicalTermsSILNT.xml  __init__.py  aligned_word_pair.py  alignment_collection.py  alignment_corpus.py  alignment_corpus_view.py  alignment_row.py  basic_quotation_mark_resolver.py  corpora_helpers.py  corpora_utils.py  corpus.py  corpus_view.py  data_type.py  dbl_bundle_text.py  dbl_bundle_text_corpus.py  dictionary_alignment_corpus.py  dictionary_text_alignment_corpus.py  dictionary_text_corpus.py  fallback_quotation_mark_resolver.py  file_paratext_project_file_handler.py  file_paratext_project_quote_convention_detector.py  file_paratext_project_settings_parser.py  file_paratext_project_terms_parser.py  file_paratext_project_text_updater.py  file_paratext_project_versification_error_detector.py  file_stream_container.py  file_usfm_versification_analyzer.py  filtered_text.py  filtered_text_alignment_corpus.py  filtered_text_corpus.py  flatten.py  key_term_row.py  memory_alignment_collection.py  memory_paratext_project_file_handler.py  (+127 more)
machine/jobs/: __init__.py  async_scheduler.py  build_clearml_helper.py  build_nmt_engine.py  build_smt_engine.py  build_word_alignment_model.py  clearml_nmt_engine_build_job.py  clearml_shared_file_service.py  config.py  eflomal_aligner.py  engine_build_job.py  hugging_face_nmt_model_factory.py  local_shared_file_service.py  nmt_build_options.py  nmt_engine_build_job.py  nmt_model_factory.py  open_nmt_model_factory.py  settings.yaml  shared_file_service.py  shared_file_service_base.py  shared_file_service_factory.py  smt_build_options.py  smt_engine_build_job.py  smt_model_factory.py  translation_engine_build_job.py  translation_file_service.py  word_alignment_build_job.py  word_alignment_build_options.py  word_alignment_file_service.py  word_alignment_model_factory.py
machine/optimization/: __init__.py  minimization_result.py  nelder_mead_simplex.py
machine/punctuation_analysis/: __init__.py  chapter.py  depth_based_quotation_mark_resolver.py  fallback_quotation_mark_resolver.py  file_paratext_project_quote_convention_detector.py  paratext_project_quote_convention_detector.py  preliminary_quotation_mark_analyzer.py  quotation_mark_denormalization_first_pass.py  quotation_mark_denormalization_usfm_update_block_handler.py  quotation_mark_finder.py  quotation_mark_string_match.py  quotation_mark_tabulator.py  quotation_mark_update_first_pass.py  quotation_mark_update_resolution_settings.py  quotation_mark_update_settings.py  quotation_mark_update_strategy.py  quote_convention.py  quote_convention_analysis.py  quote_convention_changing_usfm_update_block_handler.py  quote_convention_detector.py  quote_convention_set.py  standard_quote_conventions.py  text_segment.py  usfm_marker_type.py  usfm_structure_extractor.py  zip_paratext_project_quote_convention_detector.py
machine/quality_estimation/: __init__.py  chrf3_quality_estimator.py  score.py  scripture_book_scores.py  scripture_book_usability.py  scripture_chapter_scores.py  scripture_chapter_usability.py  scripture_segment_score.py  scripture_segment_usability.py  text_scores.py  text_segment_score.py  text_segment_usability.py  text_usability.py  thresholds.py  usability_base.py  usability_label.py  usability_parameters.py
machine/scripture/: __init__.py  canon.py  constants.py  parse.py  scripture_element.py  scripture_ref.py  verse_ref.py  versification.py
machine/sequence_alignment/: __init__.py  alignment.py  alignment_cell.py  pairwise_alignment_algorithm.py  pairwise_alignment_scorer.py
machine/statistics/: __init__.py  conditional_frequency_distribution.py  frequency_distribution.py  log_space.py
machine/tokenization/: __init__.py  detokenizer.py  latin_sentence_tokenizer.py  latin_word_detokenizer.py  latin_word_tokenizer.py  line_segment_tokenizer.py  null_tokenizer.py  range_tokenizer.py  string_detokenizer.py  string_tokenizer.py  tokenization_utils.py  tokenizer.py  tokenizer_factory.py  whitespace_detokenizer.py  whitespace_tokenizer.py  zwsp_word_detokenizer.py  zwsp_word_tokenizer.py
machine/translation/: __init__.py  corpus_ops.py  ecm_score_info.py  edit_distance.py  edit_operation.py  error_correction_model.py  error_correction_word_graph_processor.py  evaluation.py  fuzzy_edit_distance_word_alignment_method.py  hmm_word_alignment_model.py  ibm1_word_alignment_model.py  ibm1_word_confidence_estimator.py  ibm2_word_alignment_model.py  interactive_translation_engine.py  interactive_translation_model.py  interactive_translator.py  interactive_translator_factory.py  nmt_translation_engine.py  null_trainer.py  phrase.py  phrase_translation_suggester.py  segment_edit_distance.py  segment_scorer.py  symmetrization_heuristic.py  symmetrized_word_aligner.py  symmetrized_word_alignment_model.py  symmetrized_word_alignment_model_trainer.py  trainer.py  transductive_word_alignment_model.py  translation_constants.py  translation_engine.py  translation_model.py  translation_result.py  translation_result_builder.py  translation_sources.py  translation_suggester.py  translation_suggestion.py  truecaser.py  (+11 more)
samples/: clearml_run_test.py  corpora.ipynb  machine_translation.ipynb  paratext_usfm.ipynb  tokenization.ipynb  word_alignment.ipynb
tests/: conftest.py  test_utils.py
(+297 files in other folders)
