[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = "tests/testutils"

[tool.pyright]
typeCheckingMode = "basic"

[tool.poetry]
name = "sil-machine"
version = "1.0.3"
description = "A natural language processing library that is focused on providing tools for resource-poor languages."
license = "MIT"
authors = ["SIL International"]
maintainers = ["Damien Daspit <damien_daspit@sil.org>"]
readme = "README.md"
repository = "https://github.com/sillsdev/machine.py"
keywords = ["machine", "translation", "natural", "language", "processing"]
classifiers = [
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing",
  "Topic :: Text Processing :: Linguistic",
]
packages = [{ include = "machine" }]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
regex = ">=2021.7.6"
numpy = "^1.24.4"
sortedcontainers = "^2.4.0"
networkx = "^2.6.3"
charset-normalizer = "^2.1.1"

### extras
sentencepiece = "^0.1.95"
sil-thot = "^3.4.4"
# huggingface extras
transformers = "^4.34.0"
datasets = "^2.4.0"
sacremoses = "^0.0.53"
# job extras
clearml = { extras = ["s3"], version = "^1.13.1" }
dynaconf = "^3.2.5"
json-stream = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
black = "^24.1.1"       # match the vscode extension
flake8 = "^7.0.0"
isort = "^5.9.3"
pytest-cov = "^4.1.0"
ipykernel = "^6.7.0"
jupyter = "^1.0.0"
pandas = "^2.0.3"
pyright = "^1.1.362"
decoy = "^2.1.0"
pep8-naming = "^0.14.1"

[tool.poetry.group.gpu.dependencies]
# Torch is not included in the normal install to allow the user to choose the versions of these dependencies when
# installing via pypi
torch = { version = "2.1.2", markers = "sys_platform == 'win32' or sys_platform == 'linux'" }
accelerate = { version = "^0.26.1", markers = "sys_platform == 'win32' or sys_platform == 'linux'" }

[tool.poetry.extras]
sentencepiece = ["sentencepiece"]
thot = ["sil-thot"]
huggingface = ["transformers", "datasets", "sacremoses"]
jobs = ["clearml", "json-stream", "dynaconf"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
