[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = "tests/testutils"

[tool.pyright]
typeCheckingMode = "basic"
extraPaths = ["tests"]
reportMissingModuleSource = false

[tool.poetry]
name = "sil-machine"
version = "1.6.2"
description = "A natural language processing library that is focused on providing tools for resource-poor languages."
license = "MIT"
authors = ["SIL International"]
maintainers = ["Damien Daspit <damien_daspit@sil.org>"]
readme = "README.md"
repository = "https://github.com/sillsdev/machine.py"
keywords = ["machine", "translation", "natural", "language", "processing"]
classifiers = [
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing",
  "Topic :: Text Processing :: Linguistic",
]
packages = [{ include = "machine" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
regex = ">=2021.7.6"
numpy = "^1.24.4"
sortedcontainers = "^2.4.0"
networkx = "^3"
charset-normalizer = "^2.1.1"
urllib3 = "<2"

sentencepiece = "^0.2.0"
sil-thot = "^3.4.6"

transformers = ">=4.38.0,<4.46"
datasets = "^2.4.0"
sacremoses = "^0.0.53"

clearml = { extras = ["s3"], version = "^1.13.1" }
botocore = "^1.35.41"
boto3 = "^1.19.41"
dynaconf = "^3.2.5"
json-stream = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
black = "^24.1.1"
flake8 = "^7.0.0"
isort = "^5.9.3"
pytest-cov = "^4.1.0"
ipykernel = "^6.7.0"
jupyter = "^1.0.0"
pandas = "^2.0.3"
pyright = { extras = ["nodejs"], version = "^1.1.362" }
decoy = "^2.1.0"
pep8-naming = "^0.14.1"

[tool.poetry.group.gpu.dependencies]
torch = { version = "2.4.0", markers = "sys_platform == 'win32' or sys_platform == 'linux'" }
accelerate = { version = "^0.26.1", markers = "sys_platform == 'win32' or sys_platform == 'linux'" }

[tool.poetry.extras]
sentencepiece = ["sentencepiece"]
thot = ["sil-thot"]
huggingface = ["transformers", "datasets", "sacremoses"]
jobs = ["clearml", "json-stream", "dynaconf"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
